--- a/style.css
+++ b/style.css
@@ -1,29 +1,88 @@
 
-
-/*background image*/
-.hero-image {
-    background-image: url(Assets/watercolor-background.jpg);
-    background-color: #cccccc;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-
-
-/* about me section */
+/* background image */
 body {
     font-family: 'Quicksand', sans-serif;
+    background-image: url("Assets/watercolor-background.jpg");
+    background-repeat: no-repeat;
+    background-position: fixed; 
+    background-size: cover;
+    
 }
 
 
-footer {
-    text-align: center;
-    padding: 3px;
-    background-color: rgb(46, 45, 45);
-    color: white;
+
+/*About me page*/
+article {
+    background-color: white;
+    margin-top: 30px;
+    
+}
+
+.aboutme {
+    font-size: 35px;
+    color: rgb(0, 0, 0);
     font-family: 'Quicksand', sans-serif;
+}
+
+
+.imagewrap {
+    margin-left: 35px;
+    padding:0px 40px 0px 0px;
+    width: 300px;
+    float:left;
+}
+
+.text {
+    margin-left: 30px;
+}
+
+/*portfolio page*/
+
+.imagewrap{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.row{
+    margin:10px;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background-color: rgb(43, 41, 41);
+    color: white;
+    text-align: center;
+    
   }
 
-
+  .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+  }
+  
+  /* Add a hover effect if you want */
+  .fa:hover {
+    opacity: 0.7;
+  }
+  
+  /* Set a specific color for each brand */
+  
+  /* Facebook */
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+  /* Instragram */
+  .fa-instagram {
+    background: #125688;
+    color: white;
+  }
+  
